# game-lab

./: .gitignore  .gitmodules  Cargo.toml
crates/game_lab_utils/: Cargo.toml
crates/game_lab_utils/src/: debug_plugin.rs  diagnostic_plugin.rs  internal_asset_plugin.rs  lib.rs  texture_atlas_layout.rs
projects/game-1/: Cargo.toml
projects/game-1/src/: cursor.rs  game.rs  levels.rs  main.rs  map_plugin.rs  player_plugin.rs  utils.rs
projects/game-2-farmer/: Cargo.toml  README.md
projects/game-2-farmer/src/: camera.rs  main.rs  shadow.wgsl
projects/game-2-farmer/src/controller/: basic_controller.rs  debug.rs  mod.rs  plugin.rs
projects/game-2-farmer/src/map/: mod.rs
projects/game-2-farmer/src/player/: animation.rs  controller.rs  debug.rs  mod.rs  movement.rs  player.rs  plugin.rs  sprite_sheet.rs
