[workspace]
resolver = "2"
members = ["crates/game_lab_utils",
    "projects/game-1"
, "projects/game-2-farmer"]

# Enable a small amount of optimization in the dev profile.
#[profile.dev]
#opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
