[package]
name = "game-2-farmer"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
game_lab_utils = { path = "../../crates/game_lab_utils" }
bevy_egui = { version = "0.33" }
bevy_common_assets = { version = "0.12.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }